<resources>
    <string name="app_name">AppMovil</string>
    <string name="default_web_client_id">721726309682-i3qo19ndiklv2kre5c41ffvdhad61458.apps.googleusercontent.com</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="continuar_con_google">Continuar con Google</string>
    <string name="Contactar_Aseguradora">Contactar Aseguradora</string>
    <string name="Contactar_Servicio_de_emergencia">Contactar Servicio de Emergencia</string>
    <string name="elegir_opcion">Por favor elija una opción</string>
    <string name="Olvido_su_Contraseña">¿Olvidó su Contraseña?</string>
    <string name="regresar">Regresar</string>
    <string name="axa_colpatria">Axa Colpatria</string>
    <string name="mapfre">Mapfre</string>
    <string name="allianz">Allianz</string>
    <string name="seguros_bolivar">Seguros Bolívar</string>
    <string name="seguros_mundial">Seguros Mundial</string>
    <string name="sura">Sura</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="sexo">Sexo</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="logo_description">Logo de la aplicación SinBog</string>
    <string-array name="sexos_array">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="Guardar_y_Salir">Guardar y Salir</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_nombres">Nombres</string>
    <string name="Ingrese">Ingresa tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.</string>
    <string name="Enviar">Enviar</string>
    <string name="Restablecer_contraseña">Restablecer Contraseña</string>
</resources>