<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CEAF0E">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="94dp"
        android:layout_height="87dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/sinbog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Nombre de usuario -->
    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="40dp"
        android:text="Nombre de usuario"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="8dp"
        android:text="@string/elegir_opcion"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView" />


    <!-- Botón Regresar -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#7F1D1D"
        android:text="@string/regresar"
        android:textColor="#FFFFFF"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Botones de aseguradoras con íconos de teléfono -->
    <Button
        android:id="@+id/btnAxa"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/axa_colpatria"
        android:backgroundTint="#7F1D1D"
        android:textColor="#FFFFFF"
        android:drawablePadding="16dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <Button
        android:id="@+id/btnMapfre"
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:text="@string/mapfre"
        android:backgroundTint="#7F1D1D"
        android:textColor="#FFFFFF"
        android:drawablePadding="16dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/btnAxa"
        app:layout_constraintStart_toEndOf="@id/btnAxa"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/btnAllianz"
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:text="@string/allianz"
        android:backgroundTint="#7F1D1D"
        android:textColor="#FFFFFF"
        android:drawablePadding="16dp"
        app:layout_constraintTop_toTopOf="@id/btnMapfre"
        app:layout_constraintStart_toEndOf="@id/btnMapfre"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/btnBolivar"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:text="@string/seguros_bolivar"
        android:backgroundTint="#7F1D1D"
        android:textColor="#FFFFFF"
        android:drawablePadding="16dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/btnAxa"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp" />

    <Button
        android:id="@+id/btnMundial"
        android:layout_width="121dp"
        android:layout_height="58dp"
        android:text="@string/seguros_mundial"
        android:backgroundTint="#7F1D1D"
        android:textColor="#FFFFFF"
        android:drawablePadding="16dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/btnBolivar"
        app:layout_constraintStart_toEndOf="@id/btnBolivar"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/btnSura"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#7F1D1D"
        android:text="@string/sura"
        android:textColor="#FFFFFF"
        android:drawablePadding="16dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/btnMundial"
        app:layout_constraintTop_toTopOf="@id/btnMundial" />

</androidx.constraintlayout.widget.ConstraintLayout>
